SET(LIB_LIST common.c wlc_bench.c wlc_bn.c wlc_bn_print.c wlc_rand_stdc.c wlc_test.c wlc_util.c)
ADD_LIBRARY(CALC_STATIC STATIC ${LIB_LIST})
SET_TARGET_PROPERTIES(CALC_STATIC PROPERTIES  OUTPUT_NAME "hexinfinite")
SET_TARGET_PROPERTIES(CALC_STATIC PROPERTIES  CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(CALC SHARED ${LIB_LIST})
SET_TARGET_PROPERTIES(CALC PROPERTIES VERSION 1.0 SOVERSION 1)
SET_TARGET_PROPERTIES(CALC PROPERTIES  OUTPUT_NAME "hexinfinite")
SET_TARGET_PROPERTIES(CALC PROPERTIES  CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS CALC CALC_STATIC LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)